fix annoying white space at bottom

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,10 @@
 html {
 
-    background: linear-gradient( white, white, #866fac, #866fac, #866fac, #866fac)
-
+  background-color: #866fac;
+  background: linear-gradient( white, white, #866fac, #866fac, #866fac, #866fac);
+  background-repeat: no-repeat;
+  margin-bottom: 0px;
+  padding-bottom: 45px;
 }
 
 .App {
